# hackathon

./: .gitignore  README.md  docusaurus.config.js  jest.config.js  package-lock.json  package.json  requirements.txt  sidebars.js
backend/: .env.example  .gitignore  README.md  agent.py  api.py  api_test.py  check_progress.py  diagnose_qdrant.py  direct_test.py  final_integration_test.py  final_test.py  final_verification.py  ingestion_pipeline.py  main.py  pyproject.toml  requirements.txt  retrieve.py  search_test.py  simple_test.py  test_agent_mocked.py  test_api.py  test_api_endpoint.py  test_direct_agent.py  test_retrieval.py  test_retrieval_only.py  test_session.py  test_specific_query.py  test_updated_agent.py  verify_implementation.py
backend/docs/: api.md
backend/scripts/: nfr_validation.py  reliability_test.py  run_similarity_checks.py  scalability_test.py  validate_retrieval.py
backend/src/api/: agent_router.py  retrieval_router.py
backend/src/cli/: retrieval_cli.py
backend/src/embedding/: generator.py
backend/src/ingestion/: chunker.py  crawler.py  parser.py  sitemap_parser.py
backend/src/models/: agent_models.py  api_models.py  book_page.py  content_chunk.py  validation_report.py  vector_record.py
backend/src/services/: agent_service.py  qdrant_retrieval_service.py  qdrant_service.py  retrieval_service.py  similarity_service.py  validation_service.py
backend/src/storage/: qdrant_client.py  vector_store.py
backend/src/utils/: config.py  logger.py  validators.py
backend/tests/: test_chunker.py  test_crawler.py  test_embeddings.py  test_parser.py  test_storage.py
backend/tests/contract/: test_validation.py
docs/: intro.md  (+2 more)
(+309 files in other folders)
