[project]
name = "backend"
version = "0.1.0"
description = "RAG Content Ingestion Pipeline for AI-Driven Robotics Textbook"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=4.0.0",
    "qdrant-client>=1.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
]
